// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Azure Virtual Network Example renders the Example Azure Virtual Network and checks snapshot 1`] = `
"{
  "output": {
    "resource_group_name": {
      "value": "\${azurerm_resource_group.rg.name}"
    },
    "subnet_name": {
      "value": "subnet1"
    },
    "virtual_network_name": {
      "value": "\${azurerm_virtual_network.testAzureVirtualNetworkDefaults_MyVNet_290AB01C.name}"
    }
  },
  "provider": {
    "azurerm": [
      {
        "features": {
        }
      }
    ]
  },
  "resource": {
    "azurerm_resource_group": {
      "rg": {
        "location": "eastus",
        "name": "rg-test"
      }
    },
    "azurerm_subnet": {
      "testAzureRemoteVirtualNetworkDefaults_subnet1_9BF78038": {
        "address_prefixes": [
          "10.1.1.0/24"
        ],
        "name": "subnet1",
        "resource_group_name": "\${azurerm_resource_group.rg.name}",
        "virtual_network_name": "\${azurerm_virtual_network.testAzureRemoteVirtualNetworkDefaults_MyVNet_9A9B97DE.name}"
      },
      "testAzureRemoteVirtualNetworkDefaults_subnet2_5C103062": {
        "address_prefixes": [
          "10.1.2.0/24"
        ],
        "name": "subnet2",
        "resource_group_name": "\${azurerm_resource_group.rg.name}",
        "virtual_network_name": "\${azurerm_virtual_network.testAzureRemoteVirtualNetworkDefaults_MyVNet_9A9B97DE.name}"
      },
      "testAzureVirtualNetworkDefaults_subnet1_2DB834E8": {
        "address_prefixes": [
          "10.0.1.0/24"
        ],
        "name": "subnet1",
        "resource_group_name": "\${azurerm_resource_group.rg.name}",
        "virtual_network_name": "\${azurerm_virtual_network.testAzureVirtualNetworkDefaults_MyVNet_290AB01C.name}"
      },
      "testAzureVirtualNetworkDefaults_subnet2_5D8D2CC1": {
        "address_prefixes": [
          "10.0.2.0/24"
        ],
        "name": "subnet2",
        "resource_group_name": "\${azurerm_resource_group.rg.name}",
        "virtual_network_name": "\${azurerm_virtual_network.testAzureVirtualNetworkDefaults_MyVNet_290AB01C.name}"
      }
    },
    "azurerm_virtual_network": {
      "testAzureRemoteVirtualNetworkDefaults_MyVNet_9A9B97DE": {
        "address_space": [
          "10.1.0.0/16"
        ],
        "location": "westus",
        "name": "vnet-test2",
        "resource_group_name": "\${azurerm_resource_group.rg.name}"
      },
      "testAzureVirtualNetworkDefaults_MyVNet_290AB01C": {
        "address_space": [
          "10.0.0.0/16"
        ],
        "location": "eastus",
        "name": "vnet-test",
        "resource_group_name": "\${azurerm_resource_group.rg.name}"
      }
    },
    "azurerm_virtual_network_peering": {
      "testAzureVirtualNetworkDefaults_TfTokenTOKEN48_VNetPeerLocaltoRemote_CEA54D8B": {
        "name": "\${azurerm_virtual_network.testAzureVirtualNetworkDefaults_MyVNet_290AB01C.name}to\${azurerm_virtual_network.testAzureRemoteVirtualNetworkDefaults_MyVNet_9A9B97DE.name}",
        "remote_virtual_network_id": "\${azurerm_virtual_network.testAzureRemoteVirtualNetworkDefaults_MyVNet_9A9B97DE.id}",
        "resource_group_name": "\${azurerm_virtual_network.testAzureVirtualNetworkDefaults_MyVNet_290AB01C.resource_group_name}",
        "virtual_network_name": "\${azurerm_virtual_network.testAzureVirtualNetworkDefaults_MyVNet_290AB01C.name}"
      },
      "testAzureVirtualNetworkDefaults_TfTokenTOKEN48_VNetPeerRemotetoLocal_0BCF90DA": {
        "name": "\${azurerm_virtual_network.testAzureRemoteVirtualNetworkDefaults_MyVNet_9A9B97DE.name}to\${azurerm_virtual_network.testAzureVirtualNetworkDefaults_MyVNet_290AB01C.name}",
        "remote_virtual_network_id": "\${azurerm_virtual_network.testAzureVirtualNetworkDefaults_MyVNet_290AB01C.id}",
        "resource_group_name": "\${azurerm_virtual_network.testAzureRemoteVirtualNetworkDefaults_MyVNet_9A9B97DE.resource_group_name}",
        "virtual_network_name": "\${azurerm_virtual_network.testAzureRemoteVirtualNetworkDefaults_MyVNet_9A9B97DE.name}"
      }
    }
  },
  "terraform": {
    "required_providers": {
      "azurerm": {
        "source": "azurerm",
        "version": "3.66.0"
      }
    }
  }
}"
`;

exports[`Azure Virtual Network With Defaults renders an Azure Virtual Network with defaults and checks snapshot 1`] = `
"{
  "provider": {
    "azurerm": [
      {
        "features": {
        }
      }
    ]
  },
  "resource": {
    "azurerm_subnet": {
      "testAzureVirtualNetworkDefaults_subnet1_2DB834E8": {
        "address_prefixes": [
          "10.0.1.0/24"
        ],
        "name": "subnet1",
        "resource_group_name": "rg-test",
        "virtual_network_name": "\${azurerm_virtual_network.testAzureVirtualNetworkDefaults_MyVNet_290AB01C.name}"
      },
      "testAzureVirtualNetworkDefaults_subnet2_5D8D2CC1": {
        "address_prefixes": [
          "10.0.2.0/24"
        ],
        "name": "subnet2",
        "resource_group_name": "rg-test",
        "virtual_network_name": "\${azurerm_virtual_network.testAzureVirtualNetworkDefaults_MyVNet_290AB01C.name}"
      }
    },
    "azurerm_virtual_network": {
      "testAzureVirtualNetworkDefaults_MyVNet_290AB01C": {
        "address_space": [
          "10.0.0.0/16"
        ],
        "location": "eastus",
        "name": "vnet-test",
        "resource_group_name": "rg-test"
      }
    }
  },
  "terraform": {
    "required_providers": {
      "azurerm": {
        "source": "azurerm",
        "version": "3.66.0"
      }
    }
  }
}"
`;
